kubernetes/example/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Type: preresolved
          URL: index.docker.io/jamesclonk/backman@sha256:78501678eb0dc2169cbb3ff3fcb0ec6757c557f7c549d9fb365dbdcb06a0ad5d
        URL: index.docker.io/jamesclonk/backman@sha256:78501678eb0dc2169cbb3ff3fcb0ec6757c557f7c549d9fb365dbdcb06a0ad5d
  labels:
    app: backman
    app.kubernetes.io/component: gui
    app.kubernetes.io/instance: backman
    app.kubernetes.io/name: backman
  name: backman
  namespace: backman
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: backman
      app.kubernetes.io/component: gui
      app.kubernetes.io/instance: backman
      app.kubernetes.io/name: backman
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: backman
        app.kubernetes.io/component: gui
        app.kubernetes.io/instance: backman
        app.kubernetes.io/name: backman
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - backman
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - backman
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - backman
                - key: app.kubernetes.io/component
                  operator: In
                  values:
                  - gui
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - env:
        - name: PORT
          value: "8080"
        - name: TZ
          value: Europe/Zurich
        image: index.docker.io/jamesclonk/backman@sha256:78501678eb0dc2169cbb3ff3fcb0ec6757c557f7c549d9fb365dbdcb06a0ad5d
        livenessProbe:
          exec:
            command:
            - bash
            - -c
            - 'curl --fail http://localhost:8080/api/v1/states --header "Authorization: ${PROBE_AUTHORIZATION}"'
          failureThreshold: 5
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        name: backman
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8080
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
      securityContext:
        fsGroup: 2000
        runAsGroup: 2000
        runAsUser: 2000
      serviceAccountName: backman
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: backman
    app.kubernetes.io/component: ingress
    app.kubernetes.io/instance: backman
    app.kubernetes.io/name: backman
  name: backman
  namespace: backman
spec:
  rules:
  - host: backman.swisscom.com
    http:
      paths:
      - backend:
          serviceName: backman
          servicePort: 8080
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: backman
    app.kubernetes.io/component: namespace
    app.kubernetes.io/instance: backman
    app.kubernetes.io/name: backman
    namespace.kubernetes.io/name: backman
  name: backman
  namespace: backman
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: backman
    app.kubernetes.io/component: netpol
    app.kubernetes.io/instance: backman
    app.kubernetes.io/name: backman
  name: backman
  namespace: backman
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 8080
  - from:
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: ingress-nginx
      podSelector: {}
    ports:
    - port: 8080
  podSelector:
    matchLabels:
      app: backman
      app.kubernetes.io/component: gui
      app.kubernetes.io/instance: backman
      app.kubernetes.io/name: backman
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backman
    app.kubernetes.io/component: svc
    app.kubernetes.io/instance: backman
    app.kubernetes.io/name: backman
  name: backman
  namespace: backman
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: backman
    app.kubernetes.io/component: gui
    app.kubernetes.io/instance: backman
    app.kubernetes.io/name: backman
